2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/check.py:
	Add a runtime-check for pygoocanvas.

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/viewer.py:
	Fix pending-seek behaviour.
	Fixes #554602

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/ruler.py:
	Don't seek if we have an empty timeline.
	Don't set timeouts if the seek failed.

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/Makefile.am:
	dist file, even if it's not used, so it doesn't break .po files.

2008-10-09  Edward Hervey  <bilboed@gmail.com>

	* pitivi/ui/ruler.py: (ScaleRuler):
	Don't allocate insanely big pixmaps for double-buffering. Instead,
	allocate smaller ones and do the recalculation in a smart fashion.
	Fixes #552777

2008-10-09  Edward Hervey  <bilboed@gmail.com>

	* pitivi/utils.py:
	Fix 'minutes' values for times > 1hour.

2008-10-01  Edward Hervey  <bilboed@gmail.com>

	Patch by: Thijs Vermeir <thijsveirmer@gmail.com>
	* pitivi/ui/Makefile.am:
	Dist extra file
	Fixes #554544

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.11.1.2 pre-release

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

	* ChangeLog:
	Updating ChangeLog with git-svn information

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

ui: hide the webcam dialogbox before setting pipeline to NULL
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1298 d3729300-e425-0410-8a4c-d956edccc248


2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

Remove print statement
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1297 d3729300-e425-0410-8a4c-d956edccc248


2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

ui/Makefile.am : dist files from Sarath's branch
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1296 d3729300-e425-0410-8a4c-d956edccc248


2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

device : cleanup code, document methods/classes